# ktx-ai-data-agents-mcp-context-skills

./: .gitignore  .pre-commit-config.yaml  .releaserc.cjs  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  biome.json  codecov.yml  conductor.json  knip.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  release-policy.json  skills.sh.json  tombi.toml
docs/: code-design.md  ktx-ingestion-blog-post.md  package.json  release.md  spider2-dbt-benchmark.md  terminology.md
docs-site/: middleware.ts  next.config.mjs  package.json  proxy.ts  source.config.ts  tsconfig.json
examples/: README.md
scripts/: anti-fixture-conditional.test.mjs  build-adventureworks-oltp-fixture.mjs  build-benchmark-snapshot.mjs  build-benchmark-snapshot.test.mjs  build-evidence-fusion-adversarial-fixtures.mjs  build-public-npm-package.mjs  build-public-npm-package.test.mjs  build-python-runtime-wheel.mjs  build-python-runtime-wheel.test.mjs  check-boundaries.mjs  check-boundaries.test.mjs  ci-artifact-upload.test.mjs  conductor-run.sh  conductor-scripts.test.mjs  conductor-setup.sh  examples-docs.test.mjs  installed-live-database-smoke.mjs  installed-live-database-smoke.test.mjs  ktx-reset.sh  link-dev-cli.mjs  link-dev-cli.test.mjs  local-embeddings-runtime-smoke.mjs  local-embeddings-runtime-smoke.test.mjs  normalize-lcov-paths.mjs  normalize-lcov-paths.test.mjs  package-artifacts.mjs  package-artifacts.test.mjs  pglite-hybrid-search-spike.mjs  pglite-owner-process-prototype.mjs  pglite-sl-search-prototype.mjs  precommit-check.mjs  precommit-check.test.mjs  (+31 more)
(+254 files in other folders)
