[project]
name = "ktx-workspace"
version = "0.0.0"
description = "Workspace root for ktx Python packages"
requires-python = ">=3.13"
license = "Apache-2.0"
dependencies = []

[project.urls]
Homepage = "https://github.com/kaelio/ktx"
Repository = "https://github.com/kaelio/ktx"
Issues = "https://github.com/kaelio/ktx/issues"

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "ruff>=0.8.4",
]

[tool.uv]
required-version = "0.11.11"

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[tool.uv.workspace]
members = [
    "python/ktx-sl",
    "python/ktx-daemon",
]

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
pythonpath = ["python/ktx-sl/tests"]
testpaths = [
    "python/ktx-sl/tests",
    "python/ktx-daemon/tests",
]
